add text on temporal referencing and t-SNE

--- a/documents/paper.Rmd
+++ b/documents/paper.Rmd
@@ -31,7 +31,7 @@ BM: Among historians of archaeology there are two major phases in  ‘critical h
 
 LW & BM: Word embeddings are increasingly being used by researchers in novel ways and have become popular in fields such as digital humanities and computational social science. A word embedding is a set of numbers representing a word that generated from a collection of texts. A word embedding characterizes the meaning a word and can be used to reveal latent semantic relationships between pairs of words, often measured by computing the cosine similarity of two embeddings [@antoniak2018evaluating]. The general idea is similar to the concept of Principal Component Analysis (PCA) that reduces a multi-dimensional dataset into a small number of new dimensions that typically capture most of the variation in the data. In this case, a word vector is similar to a principal component because it expresses the meaning of the word into a small set of numeric values (e.g. typically 50-250 values). This set is known as the word embedding or word vector, and we visualize vectors on a plot, the distance between two words estimates the similarity between the two words. One of the most interesting and useful qualities of word vectors is that simple arithmetic operations can reveal semantic relationships between words [@mikolov2013linguistic]. For example if we subtract the word vector values for 'man' from the word vector values for 'king', and add the word vector values for 'woman', the resulting vector will be very close to that of 'queen', such that we can literally compute 'king - man + woman' to get a vector that is approximately the same as 'queen'. 
 
-BM: Word embeddings have been used as evidence in studies of historical change in language and culture [@phillips2017intrinsic; @heuser2017word; @kulkarni2015statistically]. Semantic relations between words in a corpus are captured by the geometry of the vectors, so vectors can be compared with each other to find a word’s nearest neighbors [@giorcelli2019does].  Vectors can be compared across periods to examine the degree of change a word underwent from one-time interval to the next. For example, @hamilton2016diachronic use word embeddings to study semantic change in English over the last 200 years. They visualise how the word 'gay' shifted from meaning 'cheerful' or 'frolicsome' to referring to homosexuality, and the change in 'broadcast' from referring to 'casting out seeds' to 'transmitting signals', with the rise of television and radio in the early 20th century. @yao2018dynamic generate word embeddings on 99,872 articles from the New York Times, published between January 1990 and July 2016 and their results show major semantic shifts in their words of interest. For example, the word embeddings for the US president names, Obama and Trump, shift from their pre-presidential lives (Obama as a civil rights attorney and university professor; Trump as a real estate developer and TV personality) to the political sphere.
+BM: Word embeddings have been used as evidence in studies of historical change in language and culture [@phillips2017intrinsic; @heuser2017word; @kulkarni2015statistically; @pivovarova2019word]. Semantic relations between words in a corpus are captured by the geometry of the vectors, so vectors can be compared with each other to find a word’s nearest neighbors [@giorcelli2019does].  Vectors can be compared across periods to examine the degree of change a word underwent from one-time interval to the next. For example, @hamilton2016diachronic use word embeddings to study semantic change in English over the last 200 years. They visualise how the word 'gay' shifted from meaning 'cheerful' or 'frolicsome' to referring to homosexuality, and the change in 'broadcast' from referring to 'casting out seeds' to 'transmitting signals', with the rise of television and radio in the early 20th century. @yao2018dynamic generate word embeddings on 99,872 articles from the New York Times, published between January 1990 and July 2016 and their results show major semantic shifts in their words of interest. For example, the word embeddings for the US president names, Obama and Trump, shift from their pre-presidential lives (Obama as a civil rights attorney and university professor; Trump as a real estate developer and TV personality) to the political sphere.
 
 LW:  Word embeddings  have also been used to track demographic and occupational social shifts and gender stereotypes. For example, @Garg2018 explored changes in gender stereotypes and attitudes toward ethnic minorities in the 20th and 21st centuries in the US. They created custom lists of target words representing gender and ethnicity, and neutral words, such as adjectives and jobs, serving as indicators for stereotypes and attitudes. <!--where did their word embeddings come from, and what algorithm did they use? --> With word embeddings, they compared the association between each group <!--what is the group? we need to mention the groups before this sentence --> and neutral words, where the strength of association is calculated by computing average embedding distance. They found there is a job bias for both gender and ethnic minority, <!-- we really need a concrete example here --> this bias is significantly correlated with the actual job participation rates. In addition, there is a decreases in bias reflected by adjectives for ethnic minority and gender are associated with the women’s movement in the 1960s–1970s and Asian-American population growth in the 1960s and 1980s <!--"Another bias they identified was ... give the reader a concrete result from the paper  -->. This study demonstrates a successful application of word embeddings to detect social bias <!-- can we re-prhase to be about changing meanings of words? --> and correlate the findings with historical events.
 
@@ -67,13 +67,9 @@ LW: We generated the word embeddings on the co-occurrence matrix using the GloVe
 
 <!-- one paragraph of plain and simple description of how Glove computes word vectors from co-oc matrix -->
 
-BM: One of the key practical challenges of studying temporal change in word embeddings is aligning the vectors representing the same words across multiple time periods. This is because the stochastic nature of word embeddings algorithms makes them generate representations that always have different coordinate systems and thus one set of embeddings are are not directly comparable to another set generated on a different corpus (i.e. from a different time period). Previous work generally follows a two-step pattern: first compute word embeddings in each time slice separately, then find a way to align the word embeddings across time slices. @kim2014temporal generated word embeddings for each time period by initializing them with the embeddings from the previous period. @kulkarni2015statistically compute a linear transformation of words between any two time slices by solving a n-dimensional least squares problem of k nearest neighbor words (where n is the embedding dimension). @zhang2016past similarly use a linear transformation between a base and target time slices, and compute the
-linear transformation using anchor words that does not change meaning between the two time slices (requiringprior knowledge of words that are static). @hamilton2016diachronic solves a n-dimensional Procrustes problem between every two adjacent time slices to perform the alignment. 
+BM: One of the key practical challenges of studying temporal change in word embeddings is aligning the vectors representing the same words across multiple time periods. This is because the stochastic nature of word embeddings algorithms makes them generate representations that always have different coordinate systems and thus one set of embeddings are are not directly comparable to another set generated on a different corpus (i.e. from a different time period). Previous work generally follows a two-step pattern: first compute word embeddings in each time slice separately, then find a way to align the word embeddings across time slices. @kim2014temporal generated word embeddings for each time period by initializing them with the embeddings from the previous period. @kulkarni2015statistically compute a linear transformation of words between any two time slices by solving a n-dimensional least squares problem of k nearest neighbor words (where n is the embedding dimension). @zhang2016past similarly use a linear transformation between a base and target time slices, and compute the linear transformation using anchor words that does not change meaning between the two time slices (requiring prior knowledge of words that are static). @hamilton2016diachronic solves a n-dimensional Procrustes problem between every two adjacent time slices to perform the alignment. These alignment procedures are complex, and @dubossarsky2017outta show that they suffer from biases and produce spurious results. @dubossarsky2019time show that an alternative method, temporal referencing, avoids these concerns about previous alignment methods using a radically simpler procedure. Temporal referencing combines all time-specific corpora into one corpus, and generates word embeddings on this full corpus. Before generating the embeddings, they first replace each instance of the target word with a time-specific token. For example, the word 'theory' is replaced by the time-specfic token 'theory (1970-1980)' in the meeting abstracts from the years 1970-1980, and 'theory (1980-1990)' in the meeting abstracts from the years 1980-1990, and so on for each time slice. Then a single space is generated that contains a vector for each time-specific token, and the coordinates of the background, or context, words remain the same for each time slice, with no need for alignment. Besides the advantage of avoiding alignment, this temporal referencing method lowers data requirements (because context words are collapsed, and thus shared across time slices) and is suitable for smaller corpora, producing smooth change values without millions of words. A key assumption of this approach, as with the alignment methods, is that the semantics of the context words stay relatively stable over time.
 
-
-
-
-We then visualize the values across different dimensions to explore the historical trend of word meanings related to disciplinary change in archaeology. 
+BM: Once the embeddings had been generated, we visualized the word vector values to explore the historical trends of word meanings in archaeology. We first subset the corpus to identify the words that are semantically similar to our target word using the cosine distance measure on pairs of word vectors. These similar words become the context words that map the semantic space that our target word moves through over time. Then we used the t-Distributed Stochastic Neighbor Embedding (t-SNE) method [@maaten2008visualizing] for constructing a two dimensional embedding of the word vectors to reduce the high dimensionality of the word vectors so they can projected on a scatter plot. t-SNE is a visualisation method that retaining the local structure of the data while also revealing some important global structure (such as clusters). This is useful for placing similar words close together on the plot, while maximizing the distance between dissimilar words. While t-SNE is highly flexible, and can often find structure where other dimensionality-reduction algorithms, such as PCA, cannot [@balamurali2016t], it can produce plots that are difficult to interpret, and some elements can be highly senstive to different hyperparameter settings, for example the size of the clusters and inter-cluster distances [@wattenberg2016how]. A key limitation is that because t-SNE is non-linear (compared to PCA which is a linear transformation) and adapts to the underlying data, performing different transformations on different regions of the data, t-SNE plots are not easily interpretable in terms of the axes/units of the original, high-dimensional data.  
 
 <!-- one paragraph of explaining how did we choose these words -->
 
