--- a/documents/references.bib
+++ b/documents/references.bib
@@ -1,3 +1,55 @@
+@inproceedings{balamurali2016t,
+  title={t-SNE based visualisation and clustering of geological domain},
+  author={Balamurali, Mehala and Melkumyan, Arman},
+  booktitle={International Conference on Neural Information Processing},
+  pages={565--572},
+  year={2016},
+  organization={Springer}
+}
+
+@article{wattenberg2016how,
+  author = {Wattenberg, Martin and Viégas, Fernanda and Johnson, Ian},
+  title = {How to Use t-SNE Effectively},
+  journal = {Distill},
+  year = {2016},
+  url = {http://distill.pub/2016/misread-tsne},
+  doi = {10.23915/distill.00002}
+}
+
+
+@article{pivovarova2019word,
+  title={Word Clustering for Historical Newspapers Analysis},
+  author={Pivovarova, Lidia and Marjanen, Jani and Zosa, Elaine},
+  journal={RANLP 2019},
+  pages={3},
+  year={2019}
+}
+
+@article{maaten2008visualizing,
+  title={Visualizing data using t-SNE},
+  author={Maaten, Laurens van der and Hinton, Geoffrey},
+  journal={Journal of machine learning research},
+  volume={9},
+  number={Nov},
+  pages={2579--2605},
+  year={2008}
+}
+
+@inproceedings{dubossarsky2017outta,
+  title={Outta control: Laws of semantic change and inherent biases in word representation models},
+  author={Dubossarsky, Haim and Weinshall, Daphna and Grossman, Eitan},
+  booktitle={Proceedings of the 2017 conference on empirical methods in natural language processing},
+  pages={1136--1145},
+  year={2017}
+}
+
+@article{dubossarsky2019time,
+  title={Time-out: Temporal referencing for robust modeling of lexical semantic change},
+  author={Dubossarsky, Haim and Hengchen, Simon and Tahmasebi, Nina and Schlechtweg, Dominik},
+  journal={arXiv preprint arXiv:1906.01688},
+  year={2019}
+}
+
 @article{zhang2016past,
   title={The past is not a foreign country: Detecting semantically similar terms across time},
   author={Zhang, Yating and Jatowt, Adam and Bhowmick, Sourav S and Tanaka, Katsumi},
