edit the background section

--- a/documents/paper.Rmd
+++ b/documents/paper.Rmd
@@ -33,9 +33,9 @@ LW & BM: Word embeddings are increasingly being used by researchers in novel way
 
 BM: Word embeddings have been used as evidence in studies of historical change in language and culture [@phillips2017intrinsic; @heuser2017word; @kulkarni2015statistically; @pivovarova2019word]. Semantic relations between words in a corpus are captured by the geometry of the vectors, so vectors can be compared with each other to find a word’s nearest neighbors [@giorcelli2019does].  Vectors can be compared across periods to examine the degree of change a word underwent from one-time interval to the next. For example, @hamilton2016diachronic use word embeddings to study semantic change in English over the last 200 years. They visualise how the word 'gay' shifted from meaning 'cheerful' or 'frolicsome' to referring to homosexuality, and the change in 'broadcast' from referring to 'casting out seeds' to 'transmitting signals', with the rise of television and radio in the early 20th century. @yao2018dynamic generate word embeddings on 99,872 articles from the New York Times, published between January 1990 and July 2016 and their results show major semantic shifts in their words of interest. For example, the word embeddings for the US president names, Obama and Trump, shift from their pre-presidential lives (Obama as a civil rights attorney and university professor; Trump as a real estate developer and TV personality) to the political sphere.
 
-LW:  Word embeddings  have also been used to track demographic and occupational social shifts and gender stereotypes. For example, @Garg2018 explored changes in gender stereotypes and attitudes toward ethnic minorities in the 20th and 21st centuries in the US. They created custom lists of target words representing gender and ethnicity, and neutral words, such as adjectives and jobs, serving as indicators for stereotypes and attitudes. <!--where did their word embeddings come from, and what algorithm did they use? --> With word embeddings, they compared the association between each group <!--what is the group? we need to mention the groups before this sentence --> and neutral words, where the strength of association is calculated by computing average embedding distance. They found there is a job bias for both gender and ethnic minority, <!-- we really need a concrete example here --> this bias is significantly correlated with the actual job participation rates. In addition, there is a decreases in bias reflected by adjectives for ethnic minority and gender are associated with the women’s movement in the 1960s–1970s and Asian-American population growth in the 1960s and 1980s <!--"Another bias they identified was ... give the reader a concrete result from the paper  -->. This study demonstrates a successful application of word embeddings to detect social bias <!-- can we re-prhase to be about changing meanings of words? --> and correlate the findings with historical events.
+LW:  Word embeddings have also been used to track demographic and occupational social shifts and gender stereotypes. For example, @Garg2018 explored changes in gender stereotypes and attitudes toward ethnic minorities in the 20th and 21st centuries in the US. They created word embeddings from different sources after 1900, including Google News, Google Books, and Corpus of Historical American English using Word2vex algorithm and New York Times, Wikipedia, and Common Crawl using GloVe algorithm. They made custom lists of group words representing gender and ethnicity, and neutral words, such as adjectives and jobs, serving as indicators for stereotypes and attitudes. For example, group words of man consists of he, man, boy, etc., and group words of Asian represented by last names such as li, wong, kim, etc. They compared the association between each group words (gender and ethnic minorities) and neutral words, where the strength of association is calculated by computing average embedding distance. Their results show that jobs such as nurses, dancers, housekeepers are biased toward women and there is an increase in adjectives for describing competence, such as intelligent, after women’s movement in the 1960s-1970s with higher participation rate in jobs. Another bias is the jobs of Asian-American were associated with academic positions reflecting the stereotype of the model minority, and their adjectives shift from negative words describing outsiders before 1950 to stereotype words about personality trait after 1950, with a growth of Asian-American population. This study demonstrates a successful use of word embeddings to detect semantic change in social bias over time with its sociocultural background.
 
-LW: Another example shows how word embeddings are effective <!-- Q: for what? A: for understanding semantic change over time --> by exploring the historical view on shared understandings of social classes in the 20th century in the US. @Kozlowski first compared the cultural dimensions created by word embeddings <!-- generated word embeddings from what data? and what algorithm did they use? --> with a defined word list reflecting socio-economic differences, such as 'rich', 'poor' and so on. The high association <!-- of what? between what? --> suggests that word embedding is a useful way to investigate people's views about social classes. They explored the relationship between dimensions of class identified in sociological theory, including morality, status, education, cultivation, gender, and employment. They found there is a high correlation <!-- of what? spell it out if this is about the word vectors, say --> between dimensions of education, cultivation, and morality, which corresponds to the owner/worker relation <!-- what relation? spell out more --> defined by classic Marxism. In addition, they found a stable relationship between different cultural dimensions of class over the century even though there was a major shift in the condition of economy, industry, and employment in the present day. This case study indicates the robustness of word embeddings as a method to examine historical trends of social classes. 
+LW: Another example shows how word embeddings are effective for identifying semantic changes in shared understandings of social classes in the 20th century in the US. @Kozlowski analyzed word embeddings generated on millions of books from Google Ngrams texts between 1990 and 2012 using the word2Vec algorithm with the GloVe algorithm as a cross-validation. The results suggest that 'employment', one of the class dimensions, shows most of the semantic changes from titles of formal office, such as 'lords' and 'governor', to 'promoter' and 'mogul` referring to economic status with power. Similarly, the class dimension 'employee' shifts from 'wage' and 'earners' in the early 20th century, 'soldier' during World War I, to 'retirement' and 'qualified' in the end of the century, reflecting the emergence of middle-class. They also found a close relationship between word embeddings in the classes, including education, morality, and cultivation, over time despite there is a major shift in the condition of economy, industry, and employment in the present day. This case study indicates the robustness of word embeddings as a method to examine historical trends by exploring social classes.
 
 # Methods
 
